increase Loader z-index to fix problem with focused button

--- a/components/Loader/Loader.less
+++ b/components/Loader/Loader.less
@@ -20,7 +20,7 @@
       .fillContainerPosition;
       filter: alpha(opacity=80);
       opacity: .8;
-      z-index: 1;
+      z-index: 1000;
     }
   }
 
